fix bug where navbar wasn't stuck to top

--- a/src/stylesheets/navbar.scss
+++ b/src/stylesheets/navbar.scss
@@ -14,6 +14,9 @@ $offwhite-theme2: #dbd8d7;
   font-size: 16px;
   background-color: $theme1;
   color: $white-theme;
+  position: fixed;
+  top: 0;
+  width: 100%;
 
   #logo {
     position: fixed;
